{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 23,
  "lineage": "d637f5a7-2c55-68bb-1e8f-123c9a077ad8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/zones/europe-west1-b/instanceGroups/web-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-11-27T07:24:37.958-08:00",
            "enable_cdn": false,
            "fingerprint": "9P3F_Bz35dk=",
            "generated_id": 2516368728456025050,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/httpHealthChecks/lb-http-health-check"
            ],
            "id": "projects/project-29422a96-bd2f-4e5d-b3b/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "project-29422a96-bd2f-4e5d-b3b",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_http_health_check.lb_health_check",
            "google_compute_instance.web_server",
            "google_compute_instance_group.instance_group",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_http_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-27T07:03:57.717-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-29422a96-bd2f-4e5d-b3b/global/firewalls/allow-ssh-http-access",
            "log_config": [],
            "name": "allow-ssh-http-access",
            "network": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/networks/app-module-vpc-network",
            "priority": 1000,
            "project": "project-29422a96-bd2f-4e5d-b3b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/firewalls/allow-ssh-http-access",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server",
              "ssh-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/project-29422a96-bd2f-4e5d-b3b/global/forwardingRules/http-forwarding-rule",
            "ip_address": "34.8.167.192",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-forwarding-rule",
            "port_range": "80-80",
            "project": "project-29422a96-bd2f-4e5d-b3b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/forwardingRules/http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/targetHttpProxies/http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.lb_health_check",
            "google_compute_instance.web_server",
            "google_compute_instance_group.instance_group",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/zones/europe-west1-b/disks/web-server-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-29422a96-bd2f-4e5d-b3b/zones/europe-west1-b/instances/web-server-0",
            "instance_id": "1036511573088524232",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "NddpIG7G6N4=",
            "name": "web-server-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.76.172.201",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/networks/app-module-vpc-network",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/regions/europe-west1/subnetworks/app-vpc-subnet",
                "subnetwork_project": "project-29422a96-bd2f-4e5d-b3b"
              }
            ],
            "project": "project-29422a96-bd2f-4e5d-b3b",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/zones/europe-west1-b/instances/web-server-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "ssh-server"
            ],
            "tags_fingerprint": "3eL4F_0TT2s=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/zones/europe-west1-b/disks/web-server-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-29422a96-bd2f-4e5d-b3b/zones/europe-west1-b/instances/web-server-1",
            "instance_id": "7958606279814272968",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "NddpIG7G6N4=",
            "name": "web-server-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.38.181.199",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/networks/app-module-vpc-network",
                "network_ip": "10.10.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/regions/europe-west1/subnetworks/app-vpc-subnet",
                "subnetwork_project": "project-29422a96-bd2f-4e5d-b3b"
              }
            ],
            "project": "project-29422a96-bd2f-4e5d-b3b",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/zones/europe-west1-b/instances/web-server-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "ssh-server"
            ],
            "tags_fingerprint": "3eL4F_0TT2s=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-27T07:25:43.104-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/project-29422a96-bd2f-4e5d-b3b/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "project-29422a96-bd2f-4e5d-b3b",
            "proxy_bind": false,
            "proxy_id": 6945636915907777433,
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/urlMaps/web-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.lb_health_check",
            "google_compute_instance.web_server",
            "google_compute_instance_group.instance_group",
            "google_compute_url_map.default",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-27T07:25:31.212-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Pc5_Tdc8E-8=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/project-29422a96-bd2f-4e5d-b3b/global/urlMaps/web-url-map",
            "map_id": 1797038586290623364,
            "name": "web-url-map",
            "path_matcher": [],
            "project": "project-29422a96-bd2f-4e5d-b3b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/urlMaps/web-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.lb_health_check",
            "google_compute_instance.web_server",
            "google_compute_instance_group.instance_group",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west1/app-vpc-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-27T07:01:38.020-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/project-29422a96-bd2f-4e5d-b3b/regions/europe-west1/subnetworks/app-vpc-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "app-vpc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/networks/app-module-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-29422a96-bd2f-4e5d-b3b",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/regions/europe-west1/subnetworks/app-vpc-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-29422a96-bd2f-4e5d-b3b/global/networks/app-module-vpc-network",
            "mtu": 0,
            "name": "app-module-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7576919648684595542",
            "project": "project-29422a96-bd2f-4e5d-b3b",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-29422a96-bd2f-4e5d-b3b/global/networks/app-module-vpc-network"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}